[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/Player/Fabric031_1K_Normal.jpg" type="Texture" id=1]
[ext_resource path="res://assets/box.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/Player/Fabric025_1K_Color.jpg" type="Texture" id=3]
[ext_resource path="res://Enemy.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=29]
albedo_color = Color( 1, 0.470588, 0, 1 )
albedo_texture = ExtResource( 3 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 1 )
uv1_scale = Vector3( 2, 2, 2 )
uv1_triplanar = true

[sub_resource type="CapsuleMesh" id=19]
radius = 0.25

[sub_resource type="CapsuleMesh" id=20]
radius = 0.25

[sub_resource type="SphereMesh" id=21]
radius = 0.25
height = 0.5

[sub_resource type="SpatialMaterial" id=22]
flags_world_triplanar = true
albedo_color = Color( 0, 0, 0, 1 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 1 )
uv1_scale = Vector3( 0.2, 0.2, 0.2 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=23]
size = Vector3( 0.5, 0.25, 0.05 )

[sub_resource type="SphereMesh" id=24]
radius = 0.5
height = 0.5
is_hemisphere = true

[sub_resource type="Animation" id=31]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 0.430882, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}

[sub_resource type="Animation" id=25]
resource_name = "head"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton/Head/head_mesh:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -5, 0 ), Vector3( 0, 5, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton/Head:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ), Vector3( 0, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skeleton/Head/left_leg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skeleton/Head/right_leg:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton/Head/left_leg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 40, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skeleton/Head/right_leg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -40, -8.15223e-21, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton/Head/mouth:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -1.66287e-14, 0.805184, 0.358233 ), Vector3( -1.24069e-14, 0.777517, 0.347055 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton/Head/left_leg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 30, 0, 0 ), Vector3( -30, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skeleton/Head/right_leg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -30, 0, 0 ), Vector3( 30, 0, 0 ) ]
}

[sub_resource type="AnimationNodeAdd2" id=10]

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "walk"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "sleep"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle"

[sub_resource type="AnimationNodeTimeScale" id=15]

[sub_resource type="AnimationNodeTransition" id=16]
input_count = 3
xfade_time = 0.25
input_0/name = "state 0"
input_0/auto_advance = false
input_1/name = "state 1"
input_1/auto_advance = false
input_2/name = "state 2"
input_2/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=26]
graph_offset = Vector2( -190.667, -28 )
nodes/Add2/node = SubResource( 10 )
nodes/Add2/position = Vector2( 693.333, 160 )
nodes/Animation/node = SubResource( 14 )
nodes/Animation/position = Vector2( 53.3333, 53.3333 )
"nodes/Animation 2/node" = SubResource( 11 )
"nodes/Animation 2/position" = Vector2( 53.3333, 160 )
"nodes/Animation 3/node" = SubResource( 12 )
"nodes/Animation 3/position" = Vector2( 53.3333, 266.667 )
"nodes/Animation 4/node" = SubResource( 13 )
"nodes/Animation 4/position" = Vector2( 266.667, 426.667 )
nodes/TimeScale/node = SubResource( 15 )
nodes/TimeScale/position = Vector2( 240, 160 )
nodes/anim_state/node = SubResource( 16 )
nodes/anim_state/position = Vector2( 480, 133.333 )
nodes/output/position = Vector2( 906.667, 186.667 )
node_connections = [ "output", 0, "Add2", "Add2", 0, "anim_state", "Add2", 1, "Animation 4", "TimeScale", 0, "Animation 2", "anim_state", 0, "Animation", "anim_state", 1, "TimeScale", "anim_state", 2, "Animation 3" ]

[sub_resource type="BoxShape" id=27]
extents = Vector3( 0.741932, 1.10765, 0.766667 )

[sub_resource type="CylinderShape" id=28]
radius = 9.98744
height = 2.60371

[sub_resource type="BoxShape" id=30]
extents = Vector3( 0.586539, 0.163688, 0.555313 )

[sub_resource type="CylinderShape" id=32]
radius = 1.15456
height = 1.41221

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 4 )

[node name="Skeleton" type="Spatial" parent="."]

[node name="Head" type="Spatial" parent="Skeleton"]
transform = Transform( -0.75, -2.44381e-07, 3.98147e-14, 0, -1.22191e-07, -0.75, 2.44381e-07, -0.75, 1.22191e-07, 0, 1, 0 )

[node name="head_mesh" type="MeshInstance" parent="Skeleton/Head"]
transform = Transform( 0.999848, 0, -0.0174524, 0, 1, 0, 0.0174524, 0, 0.999848, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = SubResource( 29 )

[node name="right_leg" type="MeshInstance" parent="Skeleton/Head"]
transform = Transform( 1.33333, 0, 0, 0, 1.1547, 0.666667, 0, -0.666667, 1.1547, 0.4, 0, 1 )
mesh = SubResource( 19 )
material/0 = SubResource( 29 )

[node name="left_leg" type="MeshInstance" parent="Skeleton/Head"]
transform = Transform( 1.33333, 0, 0, 0, 1.1547, -0.666667, 0, 0.666667, 1.1547, -0.4, 0, 1 )
mesh = SubResource( 20 )
material/0 = SubResource( 29 )

[node name="eyer" type="MeshInstance" parent="Skeleton/Head"]
transform = Transform( 1, 0, 0, 0, 1, -7.30097e-16, 0, 7.30097e-16, 1, -0.5, 0.855, -0.15 )
mesh = SubResource( 21 )
material/0 = SubResource( 22 )

[node name="eyel" type="MeshInstance" parent="Skeleton/Head"]
transform = Transform( 1, 0, 0, 0, 1, -7.30097e-16, 0, 7.30097e-16, 1, 0.5, 0.855, -0.15 )
mesh = SubResource( 21 )
material/0 = SubResource( 22 )

[node name="MeshInstance" type="MeshInstance" parent="Skeleton/Head"]
transform = Transform( 0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, -0.4, 0.923784, -0.4 )
mesh = SubResource( 23 )
material/0 = SubResource( 22 )

[node name="MeshInstance2" type="MeshInstance" parent="Skeleton/Head"]
transform = Transform( 0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 0.4, 0.924, -0.4 )
mesh = SubResource( 23 )
material/0 = SubResource( 22 )

[node name="MeshInstance3" type="MeshInstance" parent="Skeleton/Head"]
transform = Transform( 0.5, 0, 0, 0, -0.0338684, 0.0498852, 0, -0.498852, -0.00338684, 0, 1.00917, 0.266006 )
mesh = SubResource( 24 )
material/0 = SubResource( 22 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 2.0
anims/death = SubResource( 31 )
anims/head = SubResource( 25 )
anims/idle = SubResource( 7 )
anims/jump = SubResource( 18 )
anims/sleep = SubResource( 8 )
anims/walk = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 26 )
anim_player = NodePath("../AnimationPlayer")
parameters/Add2/add_amount = 1.0
parameters/TimeScale/scale = 1.0
parameters/anim_state/current = 1

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.638553, 0 )
shape = SubResource( 27 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.933771, 0 )
shape = SubResource( 28 )

[node name="attack_timer" type="Timer" parent="."]

[node name="chase_timer" type="Timer" parent="."]
autostart = true

[node name="angle" type="Spatial" parent="."]

[node name="hit_area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="hit_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81784, 0 )
shape = SubResource( 30 )

[node name="attack_area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="attack_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.946293, 0 )
shape = SubResource( 32 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="chase_timer" to="." method="_on_chase_timer_timeout"]
[connection signal="body_entered" from="hit_area" to="." method="_on_hit_area_body_entered"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
